--- a/templates/login.html
+++ b/templates/login.html
@@ -26,8 +26,8 @@
           <input id="password" name="password" type="password" placeholder="Password">
         </div><br>
 
-        <input id="login-submit" type="submit" value="LOGIN">
-        <label ><span id="notification-login"></span></label><br>
+        <input id="login-submit" type="submit" value="LOGIN"><br>
+        <label id="notification-login"></label><br>
       </div>
 
 
