--- a/templates/register.html
+++ b/templates/register.html
@@ -52,7 +52,7 @@
             <label class="">* EMAIL</label><br>
             <input id="email" name="email" type="email" placeholder="Email"><br>
             <input id="send-otp-submit" type="submit" value="SEND / RESEND EMAIL FOR OTP">
-            <label ><span id="notification-email"></span></label><br><br>
+            <label id="notification-email"></label><br><br>
 
             <label class="">* OTP EMAIL VERIFICATION</label><br>
             <input id="otpcode" name="otpcode" type="text" placeholder="OTP Code"><br>
@@ -62,8 +62,8 @@
             
         </div>
 
-        <input id="registration-submit" type="submit" value="CREATE AN ACCOUNT">
-        <label ><span id="notification-create-account"></span></label><br><br>
+        <input id="registration-submit" type="submit" value="CREATE AN ACCOUNT"><br>
+        <label ><span id="notification-create-account"></span></label><br>
       </div>
 
     <!-- ######################################################## -->
