--- a/templates/otp_login.html
+++ b/templates/otp_login.html
@@ -21,12 +21,11 @@
 
                 <div class="otp-login-label">       
 
-                    <label><span id="notification-otp-email"></span></label><br><br>
-                    
+                    <label id="notification-otp-email" ></label><br><br>
 
                     <label class="">ENTER OTP CODE</label><br>
                     <input id="otpcode" name="otpcode" type="text" placeholder="OTP Code"><br><br>
-                    <label ><span id="notification-otp-login"></span></label><br><br>
+                    <label id="notification-otp-login" ></label><br><br>
                 </div>
 
                 <input id="otp-login-submit" type="submit" value="VERIFY"><br>
