--- a/templates/login.html
+++ b/templates/login.html
@@ -20,9 +20,9 @@
         <label class="">LOGIN</label><br>
 
         <div class="login-label">
-          <label class="">* USERNAME OR EMAIL</label><br>
+          <label class="">USERNAME OR EMAIL<span style="color: red;"> *</span></label><br>
           <input id="username" name="username" type="text" placeholder="Username or Email"><br><br>
-          <label class="">* PASSWORD</label><br>
+          <label class="">PASSWORD<span style="color: red;"> *</span></label><br>
           <input id="password" name="password" type="password" placeholder="Password">
         </div><br>
 
