--- a/templates/otp_login.html
+++ b/templates/otp_login.html
@@ -23,7 +23,7 @@
 
                     <label id="notification-otp-email" ></label><br><br>
 
-                    <label class="">ENTER OTP CODE</label><br>
+                    <label class="">ENTER OTP CODE<span style="color: red;"> *</span></label><br>
                     <input id="otpcode" name="otpcode" type="text" placeholder="OTP Code"><br><br>
                     <label id="notification-otp-login" ></label><br><br>
                 </div>
