--- a/templates/register.html
+++ b/templates/register.html
@@ -20,41 +20,43 @@
 
         <div class="login-label">
 
-            <label class="">* FIRSTNAME</label><br>
+            <label class="">FIRSTNAME<span style="color: red;"> *</span></label><br>
             <input id="firstname" name="firstname" type="text" placeholder="First Name"><br><br>
             <label class="">MIDDLE NAME</label><br>
             <input id="middlename" name="middlename" type="text" placeholder="Middle Name"><br><br>
-            <label class="">* LAST NAME</label><br>
+            <label class="">LAST NAME<span style="color: red;"> *</span></label><br>
             <input id="lastname" name="lastname" type="text" placeholder="Last Name"><br><br>
             
             
-            <label class="">* USERNAME</label><br>
+            <label class="">USERNAME<span style="color: red;"> *</span></label><br>
             <input id="username" name="username" type="text" placeholder="Username"><br><br>
-            <label class="">* PASSWORD</label><br>
+            <label class="">PASSWORD<span style="color: red;"> *</span></label><br>
             <input id="password" name="password" type="password" placeholder="Password"><br><br>
+            <label class="">VERIFY PASSWORD<span style="color: red;"> *</span></label><br>
+            <input id="verify-password" name="password" type="password" placeholder="Re-Enter Password"><br><br>
  
-            <label class="">* STREET ADDRESS</label><br>
+            <label class="">STREET ADDRESS<span style="color: red;"> *</span></label><br>
             <input id="address" name="address" type="text" placeholder="Address"><br><br>     
             <label class="">APARTMENT</label><br>
             <input id="apartment" name="apartment" type="text" placeholder="Apartment, Unit"><br><br>           
-            <label class="">* CITY</label><br>
+            <label class="">CITY<span style="color: red;"> *</span></label><br>
             <input id="city" name="city" type="text" placeholder="City"><br><br>    
-            <label class="">* STATE OR PROVINCE</label><br>
+            <label class="">STATE OR PROVINCE<span style="color: red;"> *</span></label><br>
             <input id="state_province" name="state_province" type="text" placeholder="State or Province"><br><br>          
-            <label class="">* ZIP CODE</label><br>
+            <label class="">ZIP CODE<span style="color: red;"> *</span></label><br>
             <input id="zip_code" name="zip_code" type="text" placeholder="ZIP Code"><br><br>            
-            <label class="">* COUNTRY</label><br>
+            <label class="">COUNTRY<span style="color: red;"> *</span></label><br>
             <input id="country" name="country" type="text" placeholder="Country"><br><br>
 
-           <label class="">* PHONE NUMBER</label><br>
+           <label class="">PHONE NUMBER<span style="color: red;"> *</span></label><br>
             <input id="phone" name="phone" type="text" placeholder="Phone"><br><br>
 
-            <label class="">* EMAIL</label><br>
+            <label class="">EMAIL<span style="color: red;"> *</span></label><br>
             <input id="email" name="email" type="email" placeholder="Email"><br>
             <input id="send-otp-submit" type="submit" value="SEND / RESEND EMAIL FOR OTP">
             <label id="notification-email"></label><br><br>
 
-            <label class="">* OTP EMAIL VERIFICATION</label><br>
+            <label class="">OTP EMAIL VERIFICATION<span style="color: red;"> *</span></label><br>
             <input id="otpcode" name="otpcode" type="text" placeholder="OTP Code"><br>
             <input id="verify-otp-submit" type="submit" value="VERIFY">
             <label ><span id="notification-otp"></span></label><br><br>
