--- a/static/css/register.css
+++ b/static/css/register.css
@@ -20,14 +20,14 @@ body {
     min-height: 100%;
 
     position: relative;
-    border: 2px solid rgb(255, 0, 0);
+    /* border: 2px solid rgb(255, 0, 0); */
     padding-bottom: 5rem;
 }
 
 .sign-in {
     min-height: 100%;
 
-    border: 2px solid rgb(0, 255, 8);
+    /* border: 2px solid rgb(0, 255, 8); */
     margin: 5rem;
 
     display: flex;
@@ -41,7 +41,7 @@ body {
 }
 
 .login-label {
-    border: 2px solid rgb(242, 255, 0);
+    /* border: 2px solid rgb(242, 255, 0); */
     width: 60%;
 }
 
