--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,7 +12,7 @@ body {
 
 body {
     overflow-x: hidden;
-    background-color: rgb(209, 209, 209);
+    background-color: rgb(255, 197, 197);
     min-height: 100%;   /* dvh svh lvh */
 }
 
@@ -20,7 +20,7 @@ body {
     min-height: 100%;
 
     position: relative;
-    border: 2px solid rgb(255, 0, 0);
+    /* border: 2px solid rgb(255, 0, 0); */
     padding-bottom: 5rem;
 }
 
@@ -28,13 +28,13 @@ body {
     min-height: 100%;
 
     position: relative;
-    border: 2px solid rgb(0, 255, 8);
+    /* border: 2px solid rgb(0, 255, 8); */
     margin: 5rem;
 
 }
 
 .sign-in {
-    border: 2px solid rgb(255, 0, 255);
+    /* border: 2px solid rgb(255, 0, 255); */
 
     display: flex;
     flex-direction: column;
@@ -43,7 +43,7 @@ body {
 }
 
 .login-label {
-    border: 2px solid rgb(242, 255, 0);
+    /* border: 2px solid rgb(242, 255, 0); */
     width: 60%;
 }
 
@@ -66,7 +66,7 @@ body {
 
 .create-account {
 
-    border: 2px solid rgb(68, 0, 255);
+    /* border: 2px solid rgb(68, 0, 255); */
 
     display: flex;
     flex-direction: column;
